<resources>
    <string name="app_name">Calculadora de gorjeta</string>
    <string name="percentage">%i%</string>
    <string name="enter_a_value">Digite um valor!</string>
    <string name="account_amount">Digite o valor da conta ex: 35.50</string>
    <string name="tip">Gorjeta</string>
    <string name="total">Total</string>
    <string name="initial_tip_percentage">0%</string>
    <string name="initial_tip_value">R$ 0.00</string>
    <string name="initial_amount">R$ 0.00</string>
    <string name="money_result">R$ %.2f</string>
    <string name="main_image_view_content_description">Imagem que representa o símbolo de duas moedas</string>
</resources>